--- a/templates/home.html
+++ b/templates/home.html
@@ -58,7 +58,7 @@
 
         header a {
             background-color: #007bff;
-            color: #000000;
+            color: white;
             padding: 12px 20px;
             border: none;
             border-radius: 5px;
